# EIS_DatabaseMigrationSafetyAnalyser

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  examplesql.sql  pyproject.toml  test_safe.sql
.github/workflows/: ci.yml  pr-sql-check.yml
docs/: GITHUB_INTEGRATION.md
src/migration_analyser/: cli.py  engine.py  parser.py
src/migration_analyser/tasks/: check_drop.py  context_where.py  parser.py  task_example.py
tests/: test_cli.py  test_context_where.py
